--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,14 @@
             <version>3.32.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.mpobjects.jasperreports.font/jasperreports-fonts-lato -->
+        <dependency>
+            <groupId>com.mpobjects.jasperreports.font</groupId>
+            <artifactId>jasperreports-fonts-lato</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
